# tweetsummaryagent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  SETUP.md  config.py  docker-compose.yml  main.py  pipeline.py  pyproject.toml  requirements.txt  run-podman.sh  run.sh  scheduler.py  state.py
agents/: analytics.py  base.py  browser.py  clusterer.py  collector.py  cookies.py  filter.py  priority.py  reporter.py  selectors.py  session.py  summarizer.py  telegram.py  threader.py  util.py
auth/: login.py
db/: models.py  session.py
tests/: conftest.py  test_analytics.py  test_archive.py  test_clusterer.py  test_collector.py  test_cookies.py  test_delete.py  test_filter.py  test_phases.py  test_pipeline.py  test_priority.py  test_recovery.py  test_reporter.py  test_reset.py  test_summarizer.py  test_telegram.py  test_threader.py  test_util.py
web/: app.py  routes.py
web/templates/: accounts.html  activity.html  base.html  collections.html  digest.html  index.html  run_detail.html  runs.html  session.html  settings.html  trends.html
