[project]
name = "twitter-summary-agent"
version = "0.1.0"
description = "Daily themed-newsletter digest of tweets from accounts you follow on X/Twitter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "browser-cookie3>=0.19",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.2",
    "ollama>=0.3.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
twitter-summary-agent = "main:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["main", "config", "state", "pipeline", "scheduler"]
packages = ["db", "agents", "auth", "web"]
